Bug 381936 - The color selection for vector objects allows selecting transparency...
Summary: The color selection for vector objects allows selecting transparency...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-02 20:45 UTC by wolthera
Modified: 2018-02-24 09:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Gif showing the problem. (663.63 KB, image/gif)
2018-02-23 14:15 UTC, wolthera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2017-07-02 20:45:13 UTC
This is a bit awkward, as nowhere else we use transparency.

Transparency could be picked, but we should have the transparency separated. Also, the pop-up ought to be replaced with a proper kis_color_button anyway, but I guess that needs a interface to funnel it to flake...
Comment 1 Dmitry Kazakov 2018-02-23 12:00:12 UTC
Hi, Wolthera!

I cannot understand what the problem is, sorry :(

Could you explain how I can "pick transparency" for shapes? I see no way of doing this :(
Comment 2 wolthera 2018-02-23 14:15:12 UTC
Created attachment 110937 [details]
Gif showing the problem.

I'm ataching a gif file that shows the problem and how to get to it.

The tool options docker appearing out of nowhere is just qt being silly and hiding undocked dockers when the app is out of focus.
Comment 3 Dmitry Kazakov 2018-02-24 09:07:21 UTC
Thank you, Wolthera! I've managed to reproduce it now :)
Comment 4 Dmitry Kazakov 2018-02-24 09:23:41 UTC
Git commit b74b8e29924f3b05973ed931543d9287825a5c97 by Dmitry Kazakov.
Committed on 24/02/2018 at 09:23.
Pushed by dkazakov into branch 'master'.

Don't let opacity leak to color selectors

M  +7    -0    libs/ui/widgets/KoFillConfigWidget.cpp

https://commits.kde.org/krita/b74b8e29924f3b05973ed931543d9287825a5c97