Don't let opacity leak to color selectors

BUG:381936